--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical"
@@ -10,19 +10,19 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Go To Slim"
+        android:text="@string/app_name"
         android:textColor="#4169F1"
-        android:textSize="50dp"
+        android:textSize="50sp"
         android:textStyle="bold"
-        ></TextView>
+        />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Votre progression"
+        android:text="@string/progression"
         android:textColor="#000000"
-        android:textSize="30dp"
-        ></TextView>
+        android:textSize="30sp"
+        />
 
 
     <ProgressBar
@@ -34,22 +34,22 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="------ Menu ------"
+        android:text="@string/menu_style"
         android:textColor="#000000"
-        android:textSize="40dp"
-        ></TextView>
+        android:textSize="40sp"
+        />
 
     <Button
         android:id="@+id/recherchePlat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Rechercher un plat"
+        android:text="@string/cherche_plat"
         app:icon="@drawable/magnify"
         app:backgroundTint="#900C3F"
         app:strokeColor="#000000"
         app:strokeWidth="2dp"
         app:iconSize="50dp"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:width="300dp"
         />
 
@@ -57,13 +57,13 @@
         android:id="@+id/conseils"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Nos conseils"
+        android:text="@string/conseil_titre"
         app:icon="@drawable/hand_heart"
         app:backgroundTint="#93C47D"
         app:strokeColor="#000000"
         app:strokeWidth="2dp"
         app:iconSize="50dp"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:width="300dp"
         />
 
@@ -71,13 +71,13 @@
         android:id="@+id/suivi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Mon suivi"
+        android:text="@string/suivi"
         app:icon="@drawable/calendar_range"
         app:backgroundTint="#6FA8DC"
         app:strokeColor="#000000"
         app:strokeWidth="2dp"
         app:iconSize="50dp"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:width="300dp"
         />
 
@@ -85,13 +85,13 @@
         android:id="@+id/statsEtPoids"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Stats et poids"
+        android:text="@string/stat_poids"
         app:icon="@drawable/chart_line"
         app:backgroundTint="#FF9900"
         app:strokeColor="#000000"
         app:strokeWidth="2dp"
         app:iconSize="50dp"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:width="300dp"
         />
 
@@ -99,14 +99,13 @@
         android:id="@+id/succes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Succès"
+        android:text="@string/succes"
         app:icon="@drawable/trophy"
         app:backgroundTint="#FFD966"
         app:strokeColor="#000000"
         app:strokeWidth="2dp"
         app:iconSize="50dp"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:width="300dp"
         />
-
 </LinearLayout>
