--- a/app/src/main/res/layout/activity_recherche_plat.xml
+++ b/app/src/main/res/layout/activity_recherche_plat.xml
@@ -6,4 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".RecherchePlat">
 
+    <AutoCompleteTextView
+        android:id="@+id/search_meal"
+        android:layout_width="320dp"
+        android:layout_height="40dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:hint="@string/conseil_zone_text"
+        tools:ignore="MissingConstraints" />
 </androidx.constraintlayout.widget.ConstraintLayout>
