modif de la page d'accueil pour une scrallable

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,73 +52,89 @@
         android:textSize="40sp"
         />
 
-    <Button
-        android:id="@+id/recherchePlat"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/cherche_plat"
-        app:icon="@drawable/magnify"
-        app:backgroundTint="#900C3F"
-        app:strokeColor="#000000"
-        app:strokeWidth="2dp"
-        app:iconSize="50dp"
-        android:textSize="20sp"
-        android:width="300dp"
-        />
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:orientation="vertical"
+            android:gravity="center_horizontal"
+            android:isScrollContainer="true">
 
-    <Button
-        android:id="@+id/conseils"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/conseil_titre"
-        app:icon="@drawable/hand_heart"
-        app:backgroundTint="#93C47D"
-        app:strokeColor="#000000"
-        app:strokeWidth="2dp"
-        app:iconSize="50dp"
-        android:textSize="20sp"
-        android:width="300dp"
-        />
 
-    <Button
-        android:id="@+id/suivi"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/suivi"
-        app:icon="@drawable/calendar_range"
-        app:backgroundTint="#6FA8DC"
-        app:strokeColor="#000000"
-        app:strokeWidth="2dp"
-        app:iconSize="50dp"
-        android:textSize="20sp"
-        android:width="300dp"
-        />
+            <Button
+                android:id="@+id/recherchePlat"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/cherche_plat"
+                app:icon="@drawable/magnify"
+                app:backgroundTint="#900C3F"
+                app:strokeColor="#000000"
+                app:strokeWidth="2dp"
+                app:iconSize="50dp"
+                android:textSize="20sp"
+                android:width="300dp"
+                />
 
-    <Button
-        android:id="@+id/statsEtPoids"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/stat_poids"
-        app:icon="@drawable/chart_line"
-        app:backgroundTint="#FF9900"
-        app:strokeColor="#000000"
-        app:strokeWidth="2dp"
-        app:iconSize="50dp"
-        android:textSize="20sp"
-        android:width="300dp"
-        />
+            <Button
+                android:id="@+id/conseils"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/conseil_titre"
+                app:icon="@drawable/hand_heart"
+                app:backgroundTint="#93C47D"
+                app:strokeColor="#000000"
+                app:strokeWidth="2dp"
+                app:iconSize="50dp"
+                android:textSize="20sp"
+                android:width="300dp"
+                />
 
-    <Button
-        android:id="@+id/succes"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/succes"
-        app:icon="@drawable/trophy"
-        app:backgroundTint="#FFD966"
-        app:strokeColor="#000000"
-        app:strokeWidth="2dp"
-        app:iconSize="50dp"
-        android:textSize="20sp"
-        android:width="300dp"
-        />
+            <Button
+                android:id="@+id/suivi"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/suivi"
+                app:icon="@drawable/calendar_range"
+                app:backgroundTint="#6FA8DC"
+                app:strokeColor="#000000"
+                app:strokeWidth="2dp"
+                app:iconSize="50dp"
+                android:textSize="20sp"
+                android:width="300dp"
+                />
+
+            <Button
+                android:id="@+id/statsEtPoids"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/stat_poids"
+                app:icon="@drawable/chart_line"
+                app:backgroundTint="#FF9900"
+                app:strokeColor="#000000"
+                app:strokeWidth="2dp"
+                app:iconSize="50dp"
+                android:textSize="20sp"
+                android:width="300dp"
+                />
+
+            <Button
+                android:id="@+id/succes"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/succes"
+                app:icon="@drawable/trophy"
+                app:backgroundTint="#FFD966"
+                app:strokeColor="#000000"
+                app:strokeWidth="2dp"
+                app:iconSize="50dp"
+                android:textSize="20sp"
+                android:width="300dp"
+                />
+        </LinearLayout>
+
+    </ScrollView>
+
+
 </LinearLayout>
