--- a/app/src/main/res/layout/activity_stat_et_poids.xml
+++ b/app/src/main/res/layout/activity_stat_et_poids.xml
@@ -6,4 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".StatEtPoids">
 
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#2D4ADC"
+        android:text="@string/nouveau_poids"
+        android:visibility="visible"
+        app:iconTint="#2535C3"
+        tools:layout_editor_absoluteX="127dp"
+        tools:layout_editor_absoluteY="406dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
