--- a/app/src/main/res/layout/activity_header.xml
+++ b/app/src/main/res/layout/activity_header.xml
@@ -43,17 +43,17 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
                 android:text="@string/app_name"
                 android:textColor="#FFFFFF"
                 android:textSize="40sp"
-                android:layout_centerVertical="true"
-                android:layout_centerHorizontal="true"
                 android:textStyle="bold" />
 
         </RelativeLayout>
     </LinearLayout>
 
     <LinearLayout android:id="@+id/lldata"
+        android:orientation="vertical"
         android:layout_weight="8" android:layout_width="fill_parent"
         android:layout_height="0dp" android:background="#FFFFFF">
 
