--- a/app/src/main/res/layout/activity_conseils.xml
+++ b/app/src/main/res/layout/activity_conseils.xml
@@ -43,6 +43,7 @@
         android:text="Entrées"
         app:icon="@drawable/plat"
         app:backgroundTint="#93C47D"
+        android:background="#93C47D"
         app:strokeColor="#000000"
         app:strokeWidth="2dp"
         app:iconSize="50dp"
@@ -60,6 +61,7 @@
         android:text="Plats"
         app:icon="@drawable/plat"
         app:backgroundTint="#6FA8DC"
+        android:background="#6FA8DC"
         app:strokeColor="#000000"
         app:strokeWidth="2dp"
         app:iconSize="50dp"
@@ -80,6 +82,7 @@
         android:text="Desserts"
         android:textSize="20sp"
         app:backgroundTint="#FF9900"
+        android:background="#FF9900"
         app:icon="@drawable/dessert"
         app:iconSize="50dp"
         app:strokeColor="#000000"
