--- a/app/src/main/res/layout/activity_parametres.xml
+++ b/app/src/main/res/layout/activity_parametres.xml
@@ -1,16 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".ParametresActivity"
     android:layout_height="match_parent"
-    tools:context=".Parametres">
+    android:layout_width="match_parent">
 
   <TextView
+      android:id="@+id/textParametre"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="Test"
-    ></TextView>
+      android:layout_marginStart="104dp"
+      android:layout_marginTop="92dp"
+      android:layout_weight="1"
+      android:text="Parametres"
+      android:textSize="100px"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      tools:ignore="MissingConstraints" />
 
-  </LinearLayout>
+  <Button
+      android:id="@+id/buttonModifierMonRegime"
+      android:layout_width="263dp"
+      android:layout_height="36dp"
+      android:layout_marginStart="72dp"
+      android:layout_marginTop="80dp"
+      android:text="Modifier mon régime"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/textParametre"
+      tools:ignore="MissingConstraints" />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
