--- a/app/src/main/res/layout/activity_recherche_plat.xml
+++ b/app/src/main/res/layout/activity_recherche_plat.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RecherchePlat">
+    tools:context=".recherchePlat.RecherchePlat">
 
     <AutoCompleteTextView
         android:id="@+id/search_meal"
@@ -10,5 +10,14 @@
         android:layout_height="wrap_content"
         android:hint="@string/conseil_zone_text"
         android:textSize="30sp"/>
+
+    <ListView
+        android:id="@+id/mealList"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:choiceMode="singleChoice"
+        android:divider="#ffa0ca12"
+        android:dividerHeight="5dp" />
+
 
 </LinearLayout>
