--- a/app/src/main/res/layout/activity_header.xml
+++ b/app/src/main/res/layout/activity_header.xml
@@ -2,8 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="fill_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_height="fill_parent" android:weightSum="10"
-    android:id="@+id/commonlayout" android:background="#FFFFFF">
+    android:layout_height="fill_parent" android:weightSum="10">
 
     <LinearLayout android:id="@+id/llheader"
         android:layout_width="fill_parent"
@@ -54,8 +53,10 @@
 
     <LinearLayout android:id="@+id/lldata"
         android:orientation="vertical"
-        android:layout_weight="8" android:layout_width="fill_parent"
-        android:layout_height="0dp" android:background="#FFFFFF">
+        android:layout_weight="9"
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:background="#FFFFFF">
 
 
     </LinearLayout>
