--- a/app/src/main/res/layout/activity_recherche_plat.xml
+++ b/app/src/main/res/layout/activity_recherche_plat.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RecherchePlat">
+    tools:context=".RecherchePlat"
+    android:orientation="vertical">
 
     <AutoCompleteTextView
         android:id="@+id/search_meal"
@@ -10,5 +12,23 @@
         android:layout_height="wrap_content"
         android:hint="@string/conseil_zone_text"
         android:textSize="30sp"/>
+
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:gravity="bottom|right">
+
+        <Button
+            android:id="@+id/ajoutplat"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/ajouter_plat"
+            app:icon="@drawable/plus_circle"
+            app:backgroundTint="#4169F1"
+            app:strokeColor="#000000"
+            app:strokeWidth="2dp"
+            app:iconSize="50dp"/>
+
+    </RelativeLayout>
 
 </LinearLayout>
