--- a/app/src/main/res/layout/activity_conseils.xml
+++ b/app/src/main/res/layout/activity_conseils.xml
@@ -1,12 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical"
-    android:gravity="center"
     >
 
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="80dp">
+
+        <RelativeLayout android:id="@+id/relativeLayout1"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_gravity="center"
+            android:background="#4169F1">
+
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/settings"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/cog"
+                app:fabSize="normal"
+                app:backgroundTint="#FFFFFF"
+                android:layout_centerVertical="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginEnd="16dp"
+                app:tint="#4169F1"/>
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/home"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/home"
+                app:fabSize="normal"
+                app:backgroundTint="#FFFFFF"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="16dp"
+                app:tint="#4169F1"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:text="@string/app_name"
+                android:textColor="#FFFFFF"
+                android:textSize="40sp"
+                android:textStyle="bold" />
+
+        </RelativeLayout>
+    </LinearLayout>
 
     <TextView
         android:id="@+id/textConseil"
@@ -14,7 +58,9 @@
         android:layout_height="63dp"
         android:layout_marginBottom="15px"
         android:text="Nos conseils"
+        android:gravity="center"
         android:textColor="@color/black"
+        android:layout_gravity="center"
         android:textSize="100px" />
 
 
@@ -34,6 +80,7 @@
         android:layout_marginTop="50px"
         android:layout_marginBottom="50px"
         android:height="75dp"
+        android:layout_gravity="center"
         />
 
     <Button
@@ -52,6 +99,7 @@
         android:layout_marginTop="50px"
         android:layout_marginBottom="50px"
         android:height="75dp"
+        android:layout_gravity="center"
         />
 
     <Button
@@ -70,6 +118,7 @@
         android:layout_marginTop="50px"
         android:layout_marginBottom="50px"
         android:height="75dp"
+        android:layout_gravity="center"
         />
 
     <Button
@@ -86,7 +135,8 @@
         app:icon="@drawable/dessert"
         app:iconSize="50dp"
         app:strokeColor="#000000"
-        app:strokeWidth="2dp" />
+        app:strokeWidth="2dp"
+        android:layout_gravity="center"/>
 
 
 
