--- a/app/src/main/res/layout/activity_stat_et_poids.xml
+++ b/app/src/main/res/layout/activity_stat_et_poids.xml
@@ -1,11 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".statetpoid.StatEtPoids">
+    tools:context=".statetpoid.StatEtPoids"
+    android:orientation="vertical">
 
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="80dp">
+
+        <RelativeLayout android:id="@+id/relativeLayout1"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_gravity="center"
+            android:background="#4169F1">
+
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/settings"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/cog"
+                app:fabSize="normal"
+                app:backgroundTint="#FFFFFF"
+                android:layout_centerVertical="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginEnd="16dp"
+                app:tint="#4169F1"/>
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/home"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/home"
+                app:fabSize="normal"
+                app:backgroundTint="#FFFFFF"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="16dp"
+                app:tint="#4169F1"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:text="@string/app_name"
+                android:textColor="#FFFFFF"
+                android:textSize="40sp"
+                android:textStyle="bold" />
+
+        </RelativeLayout>
+    </LinearLayout>
 
     <Button
         android:id="@+id/button"
@@ -13,8 +59,9 @@
         android:layout_height="wrap_content"
         android:background="#2D4ADC"
         android:text="@string/nouveau_poids"
+        android:layout_gravity="center"
         android:visibility="visible"
         app:iconTint="#2535C3"
         tools:layout_editor_absoluteX="127dp"
         tools:layout_editor_absoluteY="406dp" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
