--- a/app/src/main/res/layout/activity_parametres.xml
+++ b/app/src/main/res/layout/activity_parametres.xml
@@ -76,6 +76,19 @@
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/textParametre"
       tools:ignore="MissingConstraints" />
+  <Switch
+      android:id="@+id/ModeSombre"
+      android:layout_width="209dp"
+      android:layout_height="44dp"
+      android:layout_marginStart="100dp"
+      android:layout_marginTop="28dp"
+      android:switchMinWidth="200px"
+      android:switchPadding="20px"
+      android:text="Mode sombre"
+      android:textSize="50px"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/buttonModifierMonRegime"
+      android:checked="false"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
