--- a/app/src/main/res/layout/activity_succes.xml
+++ b/app/src/main/res/layout/activity_succes.xml
@@ -4,13 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Succes">
+    tools:context=".succes.Succes">
 
     <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="fill_parent"
         android:layout_height="80dp">
 
-        <RelativeLayout android:id="@+id/relativeLayout1"
+        <RelativeLayout
+            android:id="@+id/relativeLayout1"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_gravity="center"
@@ -21,24 +23,24 @@
                 android:id="@+id/settings"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:srcCompat="@drawable/cog"
-                app:fabSize="normal"
-                app:backgroundTint="#FFFFFF"
-                android:layout_centerVertical="true"
                 android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
                 android:layout_marginEnd="16dp"
-                app:tint="#4169F1"/>
+                app:backgroundTint="#FFFFFF"
+                app:fabSize="normal"
+                app:srcCompat="@drawable/cog"
+                app:tint="#4169F1" />
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/home"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:srcCompat="@drawable/home"
-                app:fabSize="normal"
-                app:backgroundTint="#FFFFFF"
                 android:layout_centerVertical="true"
                 android:layout_marginStart="16dp"
-                app:tint="#4169F1"/>
+                app:backgroundTint="#FFFFFF"
+                app:fabSize="normal"
+                app:srcCompat="@drawable/home"
+                app:tint="#4169F1" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -51,5 +53,50 @@
 
         </RelativeLayout>
     </LinearLayout>
+
+    <Button
+        android:id="@+id/AllSuccess"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="20dp"
+        android:text="tout les succes"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <Button
+        android:id="@+id/UnlockedSucces"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="16dp"
+        android:text="succes débloquer"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="156dp"
+        android:layout_marginTop="24dp"
+        android:text="Succes"
+        android:textSize="80px"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
+
+    <FrameLayout
+        android:id="@+id/frameLayout"
+        android:layout_width="376dp"
+        android:layout_height="494dp"
+        android:layout_marginTop="69dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.0">
+
+
+    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
