--- a/app/src/main/res/layout/activity_stat_et_poids.xml
+++ b/app/src/main/res/layout/activity_stat_et_poids.xml
@@ -1,147 +1,153 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/stat_poids"
-    tools:context=".statetpoid.StatEtPoids"
-    android:orientation="vertical">
+<ScrollView
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/manage"
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/graphique">
+        android:layout_height="match_parent"
+        android:id="@+id/stat_poids"
+        tools:context=".statetpoid.StatEtPoids"
+        android:orientation="vertical">
 
-
-        <Button
-            android:id="@+id/button_setStat"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#2D4ADC"
-            android:text="@string/nouveau_poids"
-            android:visibility="visible"
-            app:iconTint="#2535C3"
-            app:layout_constraintTop_toBottomOf="@+id/input_poids"
-            tools:layout_editor_absoluteX="127dp"
-            tools:ignore="MissingConstraints" />
-
-        <EditText
-            android:id="@+id/input_poids"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/manage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="entrer votre nouveau Poids"
-            android:minHeight="48dp"
-            android:textColorHint="#757575"
-            app:layout_constraintTop_toBottomOf="@+id/input_taille"
-            tools:layout_editor_absoluteX="0dp"
-            android:inputType="number" />
+            android:orientation="vertical"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/graphique">
 
-        <EditText
-            android:id="@+id/input_taille"
+
+            <Button
+                android:id="@+id/button_setStat"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="#2D4ADC"
+                android:text="@string/nouveau_poids"
+                android:visibility="visible"
+                app:iconTint="#2535C3"
+                app:layout_constraintTop_toBottomOf="@+id/input_poids"
+                tools:layout_editor_absoluteX="127dp"
+                tools:ignore="MissingConstraints" />
+
+            <EditText
+                android:id="@+id/input_poids"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="entrer votre nouveau Poids"
+                android:minHeight="48dp"
+                android:textColorHint="#757575"
+                app:layout_constraintTop_toBottomOf="@+id/input_taille"
+                tools:layout_editor_absoluteX="0dp"
+                android:inputType="number" />
+
+            <EditText
+                android:id="@+id/input_taille"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="entrer votre nouvelle taille"
+                android:minHeight="48dp"
+                android:textColorHint="#757575"
+                app:layout_constraintTop_toTopOf="parent"
+                android:inputType="number"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <LinearLayout
+            android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="entrer votre nouvelle taille"
-            android:minHeight="48dp"
-            android:textColorHint="#757575"
-            app:layout_constraintTop_toTopOf="parent"
-            android:inputType="number"/>
+            android:orientation="vertical"
+            tools:ignore="MissingConstraints">
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        tools:ignore="MissingConstraints">
-
-        <RelativeLayout
-            android:id="@+id/relativeLayout1"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_gravity="center"
-            android:background="#4169F1">
+            <RelativeLayout
+                android:id="@+id/relativeLayout1"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_gravity="center"
+                android:background="#4169F1">
 
 
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/settings"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_marginEnd="16dp"
-                app:backgroundTint="#FFFFFF"
-                app:fabSize="normal"
-                app:srcCompat="@drawable/cog"
-                app:tint="#4169F1" />
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/settings"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginEnd="16dp"
+                    app:backgroundTint="#FFFFFF"
+                    app:fabSize="normal"
+                    app:srcCompat="@drawable/cog"
+                    app:tint="#4169F1" />
 
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/home"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginStart="16dp"
-                app:backgroundTint="#FFFFFF"
-                app:fabSize="normal"
-                app:srcCompat="@drawable/home"
-                app:tint="#4169F1" />
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/home"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginStart="16dp"
+                    app:backgroundTint="#FFFFFF"
+                    app:fabSize="normal"
+                    app:srcCompat="@drawable/home"
+                    app:tint="#4169F1" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:text="@string/app_name"
+                    android:textColor="#FFFFFF"
+                    android:textSize="40sp"
+                    android:textStyle="bold" />
+
+            </RelativeLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintTop_toBottomOf="@+id/manage"
+            tools:layout_editor_absoluteX="0dp">
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:text="@string/app_name"
-                android:textColor="#FFFFFF"
-                android:textSize="40sp"
-                android:textStyle="bold" />
+                android:id="@+id/taille"
+                android:layout_width="408dp"
+                android:layout_height="25dp"
+                android:text="Taille" />
 
-        </RelativeLayout>
-    </LinearLayout>
+            <TextView
+                android:id="@+id/poids"
+                android:layout_width="408dp"
+                android:layout_height="25dp"
+                android:text="Poids" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintTop_toBottomOf="@+id/manage"
-        tools:layout_editor_absoluteX="0dp">
+            <TextView
+                android:id="@+id/imc"
+                android:layout_width="408dp"
+                android:layout_height="25dp"
+                android:text="IMC" />
 
-        <TextView
-            android:id="@+id/taille"
-            android:layout_width="408dp"
-            android:layout_height="25dp"
-            android:text="Taille" />
+            <TextView
+                android:id="@+id/poidsPerdu"
+                android:layout_width="408dp"
+                android:layout_height="25dp"
+                android:text="Poids Perdu" />
 
-        <TextView
-            android:id="@+id/poids"
-            android:layout_width="408dp"
-            android:layout_height="25dp"
-            android:text="Poids" />
+        </LinearLayout>
 
-        <TextView
-            android:id="@+id/imc"
-            android:layout_width="408dp"
-            android:layout_height="25dp"
-            android:text="IMC" />
+        <ImageView
+            android:id="@+id/graphique"
+            android:layout_width="347dp"
+            android:layout_height="315dp"
+            android:src="@drawable/graphique"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+            tools:ignore="MissingConstraints"
+            tools:layout_editor_absoluteX="32dp" />
 
-        <TextView
-            android:id="@+id/poidsPerdu"
-            android:layout_width="408dp"
-            android:layout_height="25dp"
-            android:text="Poids Perdu" />
-
-    </LinearLayout>
-
-    <ImageView
-        android:id="@+id/graphique"
-        android:layout_width="347dp"
-        android:layout_height="315dp"
-        android:src="@drawable/graphique"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="32dp" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
