--- a/app/src/main/res/layout/activity_recherche_plat.xml
+++ b/app/src/main/res/layout/activity_recherche_plat.xml
@@ -57,7 +57,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/conseil_zone_text"
-        android:textSize="30sp"/>
+        android:textSize="30sp"
+        android:inputType="textShortMessage"/>
 
     <ListView
         android:id="@+id/mealList"
