--- a/app/src/main/res/layout-w600dp/activity_meal.xml
+++ b/app/src/main/res/layout-w600dp/activity_meal.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -52,17 +51,22 @@
         </RelativeLayout>
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/imageMeal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/jusbetrave" />
-
-    <TextView
-        android:id="@+id/recipeMeal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="La recette"/>
-
-
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:baselineAligned="false">
+        <FrameLayout
+            android:id="@+id/frame_layout_list_meal"
+            android:layout_weight="40"
+            android:layout_width="0px"
+            android:layout_height="match_parent"
+            />
+        <FrameLayout
+            android:id="@+id/frame_layout_recipe_meal"
+            android:layout_weight="60"
+            android:layout_width="0px"
+            android:layout_height="match_parent"
+            />
+    </LinearLayout>
 </LinearLayout>
