--- a/app/src/main/res/layout/fragment_list_meal.xml
+++ b/app/src/main/res/layout/fragment_list_meal.xml
@@ -1,21 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="match_parent"
+    tools:context=".conseil.ListMeal">
 
     <ListView
-        android:id="@+id/listViewPlat"
+        android:id="@+id/listViewMeal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:choiceMode="singleChoice"
         android:divider="#ffa0ca12"
         android:dividerHeight="5dp"
         >
-
-
     </ListView>
 
-
-
-</LinearLayout>
+</FrameLayout>
