--- a/app/src/main/res/layout/fragment_meal_recipe.xml
+++ b/app/src/main/res/layout/fragment_meal_recipe.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".conseil.MealRecipe">
     <LinearLayout
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:ignore="UseCompoundDrawables,UselessParent">
