--- a/app/src/main/res/layout/fragment_meal_recipe.xml
+++ b/app/src/main/res/layout/fragment_meal_recipe.xml
@@ -10,16 +10,18 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:ignore="UseCompoundDrawables,UselessParent">
+
         <ImageView
             android:id="@+id/imageMeal"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="168dp"
             app:srcCompat="@drawable/jusbetrave" />
 
-        <TextView
-            android:id="@+id/recipeMeal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="La recette"/>
+        <WebView
+            android:id="@+id/WebView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+
     </LinearLayout>
 </FrameLayout>
