--- a/app/src/main/res/layout/activity_afficher_plat.xml
+++ b/app/src/main/res/layout/activity_afficher_plat.xml
@@ -105,11 +105,11 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="400dp"
+        android:layout_height="400dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3"
-        app:srcCompat="@drawable/jusbetrave" />
+        app:srcCompat="@drawable/bouffe" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
