--- a/app/src/main/res/layout/activity_recherche_plat.xml
+++ b/app/src/main/res/layout/activity_recherche_plat.xml
@@ -63,11 +63,22 @@
     <ListView
         android:id="@+id/mealList"
         android:layout_width="match_parent"
-        android:layout_height="0sp"
+        android:layout_height="416dp"
         android:layout_weight="1"
         android:choiceMode="singleChoice"
         android:divider="#ffa0ca12"
         android:dividerHeight="5dp" />
+    <Button
+        android:id="@+id/confirmation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/confirm"
+        app:icon="@drawable/plus_circle"
+        app:backgroundTint="#4169F1"
+        app:strokeColor="#000000"
+        android:layout_gravity="center"
+        app:strokeWidth="2dp"
+        app:iconSize="50dp"/>
 
     <Button
             android:id="@+id/ajoutplat"
