--- a/app/src/main/res/layout/fragment_header.xml
+++ b/app/src/main/res/layout/fragment_header.xml
@@ -27,7 +27,7 @@
                 app:fabSize="normal"
                 app:backgroundTint="#FFFFFF"
                 android:layout_centerVertical="true"
-                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
                 android:layout_marginEnd="16dp"
                 app:tint="#4169F1" />
 
